11_Grammars/t59Parser/T59v5/gen/GramParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Gram.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class GramParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		WS=1, LINE_COMMENT=2, PROGRAM_SEPARATOR=3, I10_e_prime=4, I11_a=5, I12_b=6, 
		I13_c=7, I14_d=8, I15_e=9, I16_a_prime=10, I17_b_prime=11, I18_c_prime=12, 
		I19_d_prime=13, I20_2nd_clear=14, I22_invert=15, I23_ln=16, I24_correct_entry=17, 
		I25_clear=18, I27_2nd_invert=19, I28_log=20, I29_clear_program=21, I30_tan=22, 
		I32_exchange_x_and_t=23, I33_square=24, I34_square_root=25, I35_reciprocal=26, 
		I36_program=27, I37_polar_to_rectangular=28, I38_sin=29, I39_cos=30, I40_indirect=31, 
		I42_store=32, I43_recall=33, I44_sum=34, I45_power=35, I47_clear_memory=36, 
		I48_exchange=37, I49_product=38, I50_absolute=39, I52_exponent=40, I53_left_parenthesis=41, 
		I54_right_parenthesis=42, I55_divide=43, I57_engineering=44, I58_fix=45, 
		I59_integer=46, I60_degrees=47, I61_goto=48, I62_program_indirect=49, 
		I63_exchange_indirect=50, I64_product_indirect=51, I65_multiply=52, I66_pause=53, 
		I67_x_equals_t=54, I68_nop=55, I69_operation=56, I70_radians=57, I71_subroutine=58, 
		I72_store_indirect=59, I73_recall_indirect=60, I74_sum_indirect=61, I75_subtract=62, 
		I76_label=63, I77_x_greater_or_equal_than_t=64, I78_sigma_plus=65, I79_average=66, 
		I80_grades=67, I81_reset=68, I82_hir=69, I83_goto_indirect=70, I84_operation_indirect=71, 
		I85_add=72, I86_set_flag=73, I87_if_flag=74, I88_dms=75, I89_pi=76, I90_list=77, 
		I91_run_stop=78, I92_return=79, I93_dot=80, I94_change_sign=81, I95_equals=82, 
		I96_write=83, I97_dsz=84, I98_advance=85, I99_print=86, I2223_e_power_x=87, 
		I2228_10_power_x=88, I6740_x_equals_t_indirect=89, I7740_x_greater_or_equal_than_t_indirect=90, 
		D1=91, D2=92, A3=93, NUM=94, TAG=95, COLON=96, INVALID_CHAR=97;
	public const int
		RULE_programs = 0, RULE_program = 1, RULE_statement_or_comment = 2, RULE_tag_declaration = 3, 
		RULE_statement = 4, RULE_a4 = 5, RULE_number_statement = 6, RULE_mnemonic = 7, 
		RULE_atomic_statement = 8, RULE_d_statement = 9, RULE_i_statement = 10, 
		RULE_ad_statement = 11, RULE_ai_statement = 12, RULE_bd_statement = 13, 
		RULE_bi_statement = 14, RULE_t_statement = 15, RULE_td_statement = 16, 
		RULE_ti_statement = 17, RULE_tdd_statement = 18, RULE_tdi_statement = 19, 
		RULE_tid_statement = 20, RULE_tii_statement = 21, RULE_label_statement = 22, 
		RULE_inv_statement = 23, RULE_invalid_statement = 24;
	public static readonly string[] ruleNames = {
		"programs", "program", "statement_or_comment", "tag_declaration", "statement", 
		"a4", "number_statement", "mnemonic", "atomic_statement", "d_statement", 
		"i_statement", "ad_statement", "ai_statement", "bd_statement", "bi_statement", 
		"t_statement", "td_statement", "ti_statement", "tdd_statement", "tdi_statement", 
		"tid_statement", "tii_statement", "label_statement", "inv_statement", 
		"invalid_statement"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, "'END'", "'E''", "'A'", "'B'", "'C'", "'D'", "'E'", 
		"'A''", "'B''", "'C''", "'D''", "'CLR''", "'INV'", "'lnx'", "'CE'", "'CLR'", 
		"'INV''", "'log'", "'CP'", "'tan'", null, null, null, "'1/x'", "'Pgm'", 
		null, "'sin'", "'cos'", "'Ind'", "'STO'", "'RCL'", "'SUM'", null, "'CMs'", 
		"'Exc'", "'Prd'", null, "'EE'", "'('", "')'", null, "'Eng'", "'Fix'", 
		"'Int'", "'Deg'", "'GTO'", "'PG*'", "'EX*'", "'PD*'", null, null, null, 
		"'Nop'", "'Op'", "'Rad'", "'SBR'", "'ST*'", "'RC*'", "'SM*'", "'-'", "'Lbl'", 
		null, null, null, null, "'RST'", "'HIR'", "'GO*'", "'Op*'", "'+'", "'STF'", 
		"'IFF'", null, null, null, "'R/S'", "'RTN'", "'.'", "'+/-'", "'='", null, 
		"'Dsz'", "'Adv'", "'Prt'", null, null, "'EQ*'", "'GE*'", null, null, null, 
		null, null, "':'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "WS", "LINE_COMMENT", "PROGRAM_SEPARATOR", "I10_e_prime", "I11_a", 
		"I12_b", "I13_c", "I14_d", "I15_e", "I16_a_prime", "I17_b_prime", "I18_c_prime", 
		"I19_d_prime", "I20_2nd_clear", "I22_invert", "I23_ln", "I24_correct_entry", 
		"I25_clear", "I27_2nd_invert", "I28_log", "I29_clear_program", "I30_tan", 
		"I32_exchange_x_and_t", "I33_square", "I34_square_root", "I35_reciprocal", 
		"I36_program", "I37_polar_to_rectangular", "I38_sin", "I39_cos", "I40_indirect", 
		"I42_store", "I43_recall", "I44_sum", "I45_power", "I47_clear_memory", 
		"I48_exchange", "I49_product", "I50_absolute", "I52_exponent", "I53_left_parenthesis", 
		"I54_right_parenthesis", "I55_divide", "I57_engineering", "I58_fix", "I59_integer", 
		"I60_degrees", "I61_goto", "I62_program_indirect", "I63_exchange_indirect", 
		"I64_product_indirect", "I65_multiply", "I66_pause", "I67_x_equals_t", 
		"I68_nop", "I69_operation", "I70_radians", "I71_subroutine", "I72_store_indirect", 
		"I73_recall_indirect", "I74_sum_indirect", "I75_subtract", "I76_label", 
		"I77_x_greater_or_equal_than_t", "I78_sigma_plus", "I79_average", "I80_grades", 
		"I81_reset", "I82_hir", "I83_goto_indirect", "I84_operation_indirect", 
		"I85_add", "I86_set_flag", "I87_if_flag", "I88_dms", "I89_pi", "I90_list", 
		"I91_run_stop", "I92_return", "I93_dot", "I94_change_sign", "I95_equals", 
		"I96_write", "I97_dsz", "I98_advance", "I99_print", "I2223_e_power_x", 
		"I2228_10_power_x", "I6740_x_equals_t_indirect", "I7740_x_greater_or_equal_than_t_indirect", 
		"D1", "D2", "A3", "NUM", "TAG", "COLON", "INVALID_CHAR"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Gram.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static GramParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public GramParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public GramParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ProgramContext[] program() {
			return GetRuleContexts<ProgramContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ProgramContext program(int i) {
			return GetRuleContext<ProgramContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(GramParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] PROGRAM_SEPARATOR() { return GetTokens(GramParser.PROGRAM_SEPARATOR); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PROGRAM_SEPARATOR(int i) {
			return GetToken(GramParser.PROGRAM_SEPARATOR, i);
		}
		public ProgramsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_programs; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGramListener typedListener = listener as IGramListener;
			if (typedListener != null) typedListener.EnterPrograms(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGramListener typedListener = listener as IGramListener;
			if (typedListener != null) typedListener.ExitPrograms(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGramVisitor<TResult> typedVisitor = visitor as IGramVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPrograms(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramsContext programs() {
		ProgramsContext _localctx = new ProgramsContext(Context, State);
		EnterRule(_localctx, 0, RULE_programs);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 50;
			program();
			State = 55;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==PROGRAM_SEPARATOR) {
				{
				{
				State = 51;
				Match(PROGRAM_SEPARATOR);
				State = 52;
				program();
				}
				}
				State = 57;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 58;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Statement_or_commentContext[] statement_or_comment() {
			return GetRuleContexts<Statement_or_commentContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Statement_or_commentContext statement_or_comment(int i) {
			return GetRuleContext<Statement_or_commentContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGramListener typedListener = listener as IGramListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGramListener typedListener = listener as IGramListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGramVisitor<TResult> typedVisitor = visitor as IGramVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 2, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 63;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & -12L) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & 8589934591L) != 0)) {
				{
				{
				State = 60;
				statement_or_comment();
				}
				}
				State = 65;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Statement_or_commentContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement() {
			return GetRuleContext<StatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LINE_COMMENT() { return GetToken(GramParser.LINE_COMMENT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Tag_declarationContext tag_declaration() {
			return GetRuleContext<Tag_declarationContext>(0);
		}
		public Statement_or_commentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement_or_comment; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGramListener typedListener = listener as IGramListener;
			if (typedListener != null) typedListener.EnterStatement_or_comment(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGramListener typedListener = listener as IGramListener;
			if (typedListener != null) typedListener.ExitStatement_or_comment(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGramVisitor<TResult> typedVisitor = visitor as IGramVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement_or_comment(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Statement_or_commentContext statement_or_comment() {
		Statement_or_commentContext _localctx = new Statement_or_commentContext(Context, State);
		EnterRule(_localctx, 4, RULE_statement_or_comment);
		try {
			State = 69;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case I10_e_prime:
			case I11_a:
			case I12_b:
			case I13_c:
			case I14_d:
			case I15_e:
			case I16_a_prime:
			case I17_b_prime:
			case I18_c_prime:
			case I19_d_prime:
			case I20_2nd_clear:
			case I22_invert:
			case I23_ln:
			case I24_correct_entry:
			case I25_clear:
			case I27_2nd_invert:
			case I28_log:
			case I29_clear_program:
			case I30_tan:
			case I32_exchange_x_and_t:
			case I33_square:
			case I34_square_root:
			case I35_reciprocal:
			case I36_program:
			case I37_polar_to_rectangular:
			case I38_sin:
			case I39_cos:
			case I40_indirect:
			case I42_store:
			case I43_recall:
			case I44_sum:
			case I45_power:
			case I47_clear_memory:
			case I48_exchange:
			case I49_product:
			case I50_absolute:
			case I52_exponent:
			case I53_left_parenthesis:
			case I54_right_parenthesis:
			case I55_divide:
			case I57_engineering:
			case I58_fix:
			case I59_integer:
			case I60_degrees:
			case I61_goto:
			case I62_program_indirect:
			case I63_exchange_indirect:
			case I64_product_indirect:
			case I65_multiply:
			case I66_pause:
			case I67_x_equals_t:
			case I68_nop:
			case I69_operation:
			case I70_radians:
			case I71_subroutine:
			case I72_store_indirect:
			case I73_recall_indirect:
			case I74_sum_indirect:
			case I75_subtract:
			case I76_label:
			case I77_x_greater_or_equal_than_t:
			case I78_sigma_plus:
			case I79_average:
			case I80_grades:
			case I81_reset:
			case I82_hir:
			case I83_goto_indirect:
			case I84_operation_indirect:
			case I85_add:
			case I86_set_flag:
			case I87_if_flag:
			case I88_dms:
			case I89_pi:
			case I90_list:
			case I91_run_stop:
			case I92_return:
			case I93_dot:
			case I94_change_sign:
			case I95_equals:
			case I96_write:
			case I97_dsz:
			case I98_advance:
			case I99_print:
			case I2223_e_power_x:
			case I2228_10_power_x:
			case I6740_x_equals_t_indirect:
			case I7740_x_greater_or_equal_than_t_indirect:
			case D1:
			case D2:
			case A3:
			case NUM:
			case COLON:
				EnterOuterAlt(_localctx, 1);
				{
				State = 66;
				statement();
				}
				break;
			case LINE_COMMENT:
				EnterOuterAlt(_localctx, 2);
				{
				State = 67;
				Match(LINE_COMMENT);
				}
				break;
			case TAG:
				EnterOuterAlt(_localctx, 3);
				{
				State = 68;
				tag_declaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Tag_declarationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TAG() { return GetToken(GramParser.TAG, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COLON() { return GetToken(GramParser.COLON, 0); }
		public Tag_declarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_tag_declaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGramListener typedListener = listener as IGramListener;
			if (typedListener != null) typedListener.EnterTag_declaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGramListener typedListener = listener as IGramListener;
			if (typedListener != null) typedListener.ExitTag_declaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGramVisitor<TResult> typedVisitor = visitor as IGramVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTag_declaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Tag_declarationContext tag_declaration() {
		Tag_declarationContext _localctx = new Tag_declarationContext(Context, State);
		EnterRule(_localctx, 6, RULE_tag_declaration);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 71;
			Match(TAG);
			State = 72;
			Match(COLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Number_statementContext number_statement() {
			return GetRuleContext<Number_statementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Atomic_statementContext atomic_statement() {
			return GetRuleContext<Atomic_statementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public D_statementContext d_statement() {
			return GetRuleContext<D_statementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public I_statementContext i_statement() {
			return GetRuleContext<I_statementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Bd_statementContext bd_statement() {
			return GetRuleContext<Bd_statementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Bi_statementContext bi_statement() {
			return GetRuleContext<Bi_statementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public T_statementContext t_statement() {
			return GetRuleContext<T_statementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Label_statementContext label_statement() {
			return GetRuleContext<Label_statementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Inv_statementContext inv_statement() {
			return GetRuleContext<Inv_statementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Invalid_statementContext invalid_statement() {
			return GetRuleContext<Invalid_statementContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGramListener typedListener = listener as IGramListener;
			if (typedListener != null) typedListener.EnterStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGramListener typedListener = listener as IGramListener;
			if (typedListener != null) typedListener.ExitStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGramVisitor<TResult> typedVisitor = visitor as IGramVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 8, RULE_statement);
		try {
			State = 84;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 74;
				number_statement();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 75;
				atomic_statement();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 76;
				d_statement();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 77;
				i_statement();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 78;
				bd_statement();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 79;
				bi_statement();
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 80;
				t_statement();
				}
				break;
			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				State = 81;
				label_statement();
				}
				break;
			case 9:
				EnterOuterAlt(_localctx, 9);
				{
				State = 82;
				inv_statement();
				}
				break;
			case 10:
				EnterOuterAlt(_localctx, 10);
				{
				State = 83;
				invalid_statement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class A4Context : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] D2() { return GetTokens(GramParser.D2); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode D2(int i) {
			return GetToken(GramParser.D2, i);
		}
		public A4Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_a4; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGramListener typedListener = listener as IGramListener;
			if (typedListener != null) typedListener.EnterA4(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGramListener typedListener = listener as IGramListener;
			if (typedListener != null) typedListener.ExitA4(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGramVisitor<TResult> typedVisitor = visitor as IGramVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitA4(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public A4Context a4() {
		A4Context _localctx = new A4Context(Context, State);
		EnterRule(_localctx, 10, RULE_a4);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 86;
			Match(D2);
			State = 87;
			Match(D2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
